cros: fix crosEulaFrame needs second tab for focus

changes:
Currently, we are able to scroll on terms contents when eula screen is
shown, not on focus returned from ash::SystemTray. This CL adds this
ability.

Bug: 777372
Test: tested on emulator
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ia20617ea43e35fd82cbbd469f08f9eecca3f1b6e
Reviewed-on: https://chromium-review.googlesource.com/853532
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Qiang(Joe) Xu <warx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528178}
Former-commit-id: 72ece810c9398440582d98c1162af5779461d30b